# dual_source_ingestion

./: README.md  pyproject.toml  test.txt
Services/: chunker.py  embed.py  gateway.py  search.py  store.py
Services/routes/: ingest.py  search.py
test_files/1/: case_004  case_004_meta.json
ziptest/upload/case_001/: file.txt  metadata.json
ziptest/upload/case_002/: file.txt  metadata.json
